# project

./: .gitignore  LICENSE
app/backend/: app.py  pyproject.toml  routes.py  services.py
src/assets/: dataset.json
